--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     env_file:
       - .env_example
     depends_on:
-      - database
+      database:
+        condition: service_healthy
 
   database:
     image: postgres:15
