--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.9"
 services:
   dog-backend:
-    build: .
+    build: ..
     container_name: dog-backend
     ports:
       - "8000:8000"
     env_file:
-      - .env_example
+      - ../.env_example
     depends_on:
       database:
         condition: service_healthy
@@ -20,7 +20,7 @@ services:
       timeout: 5s
       retries: 10
     env_file:
-      - .env_example
+      - ../.env_example
     ports:
       - "5432:5432"
     volumes:
